--- a/Loenn/lang/en_gb.lang
+++ b/Loenn/lang/en_gb.lang
@@ -10,6 +10,7 @@ entities.outback/portal.attributes.description.direction=The direction the porta
 entities.outback/portal.attributes.description.cooldownTimer=The number of seconds the portal is intangible after teleporting.\nUsually, the portal only has a cooldown while the player is inside it.\n(default 0)
 entities.outback/portal.attributes.description.fixRotationAngle=Fix a bug where the player's speed sometimes rotated an additional 0.0000025 degrees.
 entities.outback/portal.attributes.description.cornerGlideProtection=Gain retained wall speed before getting through the portal, rather than after. (so your velocity can be rotated correctly.)
+entities.outback/portal.attributes.description.moveCamera=Also moves camera after teleporting player.
 
 # Timed Touch Switch
 entities.outback/timedtouchswitch.placements.name.Slow=Timed Touch Switch (Slow)
